@@ -1,4 +1,29 @@
+/*
+ *  CPAchecker is a tool for configurable software verification.
+ *  This file is part of CPAchecker.
+ *
+ *  Copyright (C) 2007-2014  Dirk Beyer
+ *  All rights reserved.
+ *
+ *  Licensed under the Apache License, Version 2.0 (the "License");
+ *  you may not use this file except in compliance with the License.
+ *  You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ *  Unless required by applicable law or agreed to in writing, software
+ *  distributed under the License is distributed on an "AS IS" BASIS,
+ *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *  See the License for the specific language governing permissions and
+ *  limitations under the License.
+ *
+ *
+ *  CPAchecker web page:
+ *    http://cpachecker.sosy-lab.org
+ */
 package org.sosy_lab.cpachecker.core.algorithm.testgen.iteration;
+
+import java.util.List;
 
 import javax.annotation.Nullable;
 
@@ -61,9 +86,10 @@ public class PredicatePathAnalysisResult {
   }
   public CFAEdge getSelectedLastEdge() {
     checkValid();
-    CFAEdge edge = argPath.getLast().getSecond();
-    if(edge == null && argPath.size()>1) {
-      edge = argPath.get(argPath.size()-2).getSecond();
+    List<CFAEdge> edges = argPath.asEdgesList();
+    CFAEdge edge = edges.get(edges.size()-1);
+    if (edge == null && edges.size()>1) {
+      edge = edges.get(edges.size()-2);
     }
     return edge;
   }
